# hyperfs

./: LICENSE  README.md  flake.nix
.github/workflows/: build.yaml
licenses/: MIT.txt
src/: arch-pkgs.nix  archs.nix  build-all-archs.nix  build-dist.nix  cross-overlays.nix  nixpkgs-fix-ppc.patch
src/hyperfs/: default.nix  hyperfs.c
src/ltrace/: default.nix
src/patches/: musl-loongarch-regset.patch
src/pkgs/: gdbserver.nix  ltrace.nix  micropython.nix  strace.nix
src/pkgs/hyperfs/: default.nix  hyperfs.c  passthrough.c
src/shimguin/: Cargo.toml  build.rs  default.nix  test.nix
src/shimguin/src/: lib.rs  link_sys.rs
src/unionfs/: default.nix  forward-ioctls.patch
