[package]
name = "shimguin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
bindgen = { version = "0.69.4" }

[dependencies]
cfg-if = "1.0.0"
ctor = "0.2.7"
lazy_static = "1.4.0"
libc = "0.2.153"
object = "0.34.0"
rustix = { version = "0.38.32", features = ["param", "mm"] }
